# cppalgorithm

./: .gitignore  CMakeLists.txt  README.md
datastructures/: bag.hh  datastructure.hh  dynamicarray.hh  fixedarray.hh  linkedlist.hh  queue.hh  stack.hh
iterator/: forwarditerator.hh  iterator.hh
super/: addeabledatastructure.hh  array.hh  basicdatastructure.hh  pushabledatastructure.hh  randomaccessdatastructure.hh  sizeabledatastructure.hh
tests/: catch.hpp  test_array.cc  test_datastructures.cc  test_underlying.cc
underlying/: datastructure.hh  dynamic_array.hh  dynamicarray.hh  fixed_array.hh  fixedarray.hh  linkedlist.hh  underlying.hh
